<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical">

    <TextView
        android:layout_width="150dp"
        android:layout_height="50dp" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_gravity="center"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/nameprint"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </TableRow>

    <TextView
        android:layout_width="150dp"
        android:layout_height="50dp" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_gravity="center"
        android:gravity="center_horizontal">

        <TextView android:text="@string/addnewitems" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_gravity="center"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/ClickHereForNew"
            android:onClick="onClick11"
            android:text="@string/clickhere" />
    </TableRow>

    <TextView
        android:layout_width="150dp"
        android:layout_height="50dp" />


    <TableRow


        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal">

        <TextView android:text="@string/logot" />
    </TableRow>


    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_gravity="center"
        android:gravity="center_horizontal">


        <Button
            android:id="@+id/ClickHereLogout"
            android:onClick="onClick16"
            android:text="@string/logout" />
    </TableRow>


</TableLayout>
