<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollView01"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button

                android:id="@+id/button1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#FFFFFF"
                android:onClick="onClick1"
                android:text="@string/A1" />

            <Button
                android:id="@+id/button2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:background="#FFFFFF"

                android:onClick="onClick2"
                android:text="@string/A2" />

        </TableRow>


        <TextView
            android:layout_width="150dp"
            android:layout_height="50dp" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_gravity="center"
            android:gravity="center_horizontal">

            <TextView
                android:layout_weight="1"
                android:includeFontPadding="false"

                android:text="@string/signup_name" />
            <!-- android:layout_marginRight="-90dp" -->
            <EditText
                android:id="@+id/signup_name_value"
                android:layout_marginLeft="-150dp"
                android:layout_marginRight="30dp"
                android:layout_weight="1"

                android:includeFontPadding="false"
                android:inputType="text" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_horizontal">

            <TextView
                android:layout_weight="1"
                android:width="1dp"
                android:includeFontPadding="false"
                android:text="@string/signup_email" />


            <EditText
                android:id="@+id/signup_email"
                android:layout_marginLeft="-150dp"

                android:layout_marginRight="30dp"
                android:layout_weight="1"
                android:width="1dp"
                android:includeFontPadding="false"
                android:inputType="textEmailAddress" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_horizontal">

            <TextView
                android:layout_weight="1"
                android:width="1dp"
                android:includeFontPadding="false"
                android:text="@string/signup_username" />

            <EditText
                android:id="@+id/signup_username_value"

                android:layout_marginLeft="-150dp"
                android:layout_marginRight="30dp"
                android:layout_weight="1"
                android:width="1dp"
                android:includeFontPadding="false"
                android:inputType="text" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_horizontal">

            <TextView
                android:layout_weight="1"
                android:width="1dp"
                android:includeFontPadding="false"
                android:text="@string/signup_password" />

            <EditText
                android:id="@+id/signup_password_value"

                android:layout_marginLeft="-150dp"
                android:layout_marginRight="30dp"
                android:layout_weight="1"
                android:width="1dp"
                android:includeFontPadding="false"
                android:inputType="textPassword" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_horizontal">

            <TextView
                android:layout_weight="1"
                android:width="1dp"
                android:includeFontPadding="false"
                android:text="@string/signup_retype_password" />

            <EditText
                android:id="@+id/signup_retype_password_value"
                android:layout_marginLeft="-150dp"
                android:layout_marginRight="30dp"
                android:layout_weight="1"

                android:width="1dp"
                android:includeFontPadding="false"
                android:inputType="textPassword" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_horizontal">

            <TextView
                android:layout_weight="1"
                android:width="1dp"
                android:includeFontPadding="false"
                android:text="@string/signup_address" />

            <EditText
                android:id="@+id/signup_address_value"

                android:layout_marginLeft="-150dp"
                android:layout_marginRight="30dp"
                android:layout_weight="1"
                android:width="1dp"
                android:includeFontPadding="false"
                android:inputType="text" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_horizontal">

            <TextView
                android:layout_weight="1"
                android:width="1dp"
                android:includeFontPadding="false"
                android:text="@string/signup_phonenumber" />

            <EditText
                android:id="@+id/signup_phonenumber_value"
                android:layout_marginLeft="-150dp"
                android:layout_marginRight="30dp"
                android:layout_weight="1"
                android:width="1dp"

                android:includeFontPadding="false"
                android:inputType="phone" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_horizontal">

            <CheckBox
                android:id="@+id/signup_agree"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/signup_agree" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_horizontal">

            <Button
                android:id="@+id/signup_create_account"
                android:onClick="onClick5"
                android:text="@string/signup_create_account" />
        </TableRow>

    </TableLayout>

</ScrollView>