<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"  
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollView01"  
    android:layout_width="match_parent" 
    android:layout_height="match_parent" >  
    

<TableLayout 
    
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    tools:context=".MainActivity" >

 <TableRow 
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <Button
        
        android:background="#FFFFFF"
        android:layout_width="0dp"
    android:id="@+id/button1"
        android:onClick="onClick1" 
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:text="@string/A1" />

    <Button
        android:id="@+id/button2"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:onClick="onClick2"   
  
    android:background="#FFFFFF"
  
        android:layout_height="wrap_content"
        android:text="@string/A2" />

    </TableRow>
    
<TextView
 android:layout_width="150dp"
    android:layout_height="150dp" /> 



<ImageView
    android:id="@+id/imgLogo"
    android:layout_width="150dp"
    android:layout_height="200dp"
    android:contentDescription="@string/splashscreen"
    android:scaleType="fitCenter"
    android:src="@drawable/logo" />

</TableLayout>
</ScrollView>