<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_weight="1" />


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_horizontal">

            <TextView
                android:layout_weight="1"
                android:width="2dp"
                android:includeFontPadding="false"
                android:text="@string/nameofitem" />
            <!-- android:layout_marginRight="-90dp" -->
            <EditText
                android:id="@+id/item_name_value"
                android:layout_marginLeft="-70dp"
                android:layout_marginRight="50dp"
                android:layout_weight="1"
                android:width="1dp"
                android:includeFontPadding="false"
                android:inputType="text" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_horizontal">

            <TextView
                android:layout_marginRight="-90dp"
                android:layout_weight="1"
                android:width="2dp"
                android:includeFontPadding="false"
                android:text="@string/category" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_marginLeft="-70dp"
                android:layout_marginRight="50dp"
                android:layout_weight="1"
                android:width="1dp"
                android:includeFontPadding="false" />


        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_horizontal">

            <TextView
                android:layout_marginRight="-90dp"
                android:layout_weight="1"
                android:width="2dp"
                android:includeFontPadding="false"
                android:text="@string/item_description" />


            <EditText
                android:id="@+id/item_description_value"
                android:layout_width="wrap_content"
                android:layout_marginLeft="-70dp"
                android:layout_marginRight="50dp"
                android:layout_weight="1"
                android:width="1dp"
                android:includeFontPadding="false"
                android:inputType="text" />

        </TableRow>


        <TextView
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_weight="1" />


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_horizontal">

            <TextView
                android:layout_marginRight="-90dp"
                android:layout_weight="1"
                android:width="2dp"
                android:includeFontPadding="false"
                android:text="@string/contact_info" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_horizontal">

            <TextView
                android:layout_marginRight="-90dp"
                android:layout_weight="1"
                android:width="2dp"
                android:includeFontPadding="false"
                android:text="@string/Nameofperson" />

            <EditText
                android:id="@+id/signup_item_person_name"
                android:layout_marginLeft="-70dp"
                android:layout_marginRight="50dp"
                android:layout_weight="1"
                android:width="1dp"
                android:includeFontPadding="false"
                android:inputType="text" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_horizontal">

            <TextView
                android:layout_marginRight="-90dp"
                android:layout_weight="1"
                android:width="2dp"
                android:includeFontPadding="false"
                android:text="@string/emailid" />

            <EditText
                android:id="@+id/emailid_seller_value"
                android:layout_marginLeft="-70dp"
                android:layout_marginRight="50dp"
                android:layout_weight="1"
                android:width="1dp"
                android:includeFontPadding="false"
                android:inputType="textEmailAddress" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_horizontal">

            <TextView
                android:layout_marginRight="-90dp"
                android:layout_weight="1"
                android:width="2dp"
                android:includeFontPadding="false"
                android:text="@string/Phone_number" />

            <EditText
                android:id="@+id/phone_number_seller_value"
                android:layout_marginLeft="-70dp"
                android:layout_marginRight="50dp"
                android:layout_weight="1"
                android:width="1dp"
                android:includeFontPadding="false"
                android:inputType="phone" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_horizontal">

            <CheckBox
                android:id="@+id/are_you_sure"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/are_you_sure" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_horizontal">

            <Button
                android:id="@+id/submit"
                android:onClick="onClick13"
                android:text="@string/submit" />
        </TableRow>

    </TableLayout>

</ScrollView>
	
